# eerie-viewer-workflows

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: on-push.yml
eerieview/: __init__.py  cdo.py  cmor.py  constants.py  data_access.py  data_models.py  data_processing.py  eke.py  exceptions.py  grids.py  io_utils.py  logger.py  metadata.py  product_computation.py  regions.py  zarr.py
eerieview/resources/: EERIE_Amon.json  Eddy-rich-regions.geojson  IPCC-WGI-reference-regions-v4_areas.geojson  global_region.geojson  grid0125_cdo.txt
eerieview/trends/: api.py  regression.py
scripts/: download_era5.py  eerie_menus.xlsx  fix_zarr.py  gen_hires_regular_gridfile.py  gen_menus.py  get_aviso_monthly_variables.py  get_climatologies.py  get_global_temp_time_series.py  get_monthly_eke.py  get_obs_climatologies.py  get_obs_time_series.py  get_time_series.py  plot_stripes.py  qc_input_data.py  resolution_comparison.py  upload_to_zarr.py
tests/: conftest.py  test_00_version.py  test_compute_trend.py  test_data_models.py  test_decadal.py  test_series.py
