[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering"
]
description = "Functions and workflows for p"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "eerie-data-viewer-pipeline"
readme = "README.md"

[tool.coverage.run]
branch = true

[tool.mypy]
ignore_missing_imports = true
namespace_packages = false
strict = false

[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"
norecursedirs = [
  'tests/docker'
]

[tool.ruff]
# Same as Black.
indent-width = 4
line-length = 88

[tool.ruff.lint]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1",
  "F841",
  "D205",
  "E402"
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.ruff.lint.pycodestyle]
max-line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages = ["eerieview"]

[tool.setuptools_scm]
write_to = "eerieview/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
